# lightweight_aead

./: CMakeLists.txt  LICENSE  README.md
ascon/: CMakeLists.txt  ascon_common.c  ascon_common.h  ascon_decrypt.c  ascon_encrypt.c  interleaving.h  word.h
ascon-p/: CMakeLists.txt  linear_layer.h  perm_api.h  perm_rv32.c  permutation.c  s_box.h
ascon-p/include/ascon/: permutation.h
ascon-p/tests/: test_integration.c  test_linear_layer.c  test_ror.c  test_s_box.c  tests.c
ascon/include/ascon/: ascon.h
ascon/tests/: test_interleave.c  test_load_store.c  tests.c
ascon_bench/: CMakeLists.txt  bench.c  bench_ascon_128.c  bench_ascon_128a.c
ascon_tests/: CMakeLists.txt  test_ascon_128.c  test_ascon_128a.c  test_data_128.c  test_data_128a.c  tests.c
common/: CMakeLists.txt  interleaving.c  round_constants.c
common/include/_internal/: common.h  state.h
isap/: CMakeLists.txt  interleaving.h  isap.c  isap.h  isap_enc.c  isap_mac.c  isap_rk.c
isap/include/isap/: isap.h
isap_bench/: CMakeLists.txt  bench.c  bench_isap_a_128.c  bench_isap_a_128a.c
isap_tests/: CMakeLists.txt  test_data_128.c  test_data_128a.c  test_isapa_128.c  test_isapa_128a.c  tests.c
libtest/: CMakeLists.txt  crt0.c  getcycles.c  main.c  random.c  state.c  verilator_ibex.ld
libtest/include/_internal/: testing.h
libtest/verilator_ibex/: common.c  common.h  crt0.S
printf/: CMakeLists.txt  printf.h
